SERVER-74449 Abort ongoin migrations on single phase builds